--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body {
     width: 100%;
     height: 100%;
     max-width: 600px;
-    max-height: 400px;
+    max-height: 600px;
     justify-items: center;
     align-items: center;
     border-radius: 20px;
@@ -39,11 +39,24 @@ body {
 
 #grid-container {
     background-color: white;
-    height: 285px;
+    height: 450px;
     width: 450px;
     margin: 20px;
+    /* display: flex;
+    align-content: flex-start;
+    flex-wrap: wrap;
+    flex-direction: row; */
 }
 
 button {
     margin-top: 10px;
+}
+
+.cell {
+    border: 0.5px solid black;
+    background-color: white ;
+    box-sizing: border-box;
+    padding: 1px;
+    margin: 1px;
+    /* display: flex; */
 }
