--- a/styles.css
+++ b/styles.css
@@ -42,10 +42,13 @@ body {
     height: 450px;
     width: 450px;
     margin: 20px;
-    /* display: flex;
-    align-content: flex-start;
+    display: flex;
+    align-content: center;
+    justify-content: center;
     flex-wrap: wrap;
-    flex-direction: row; */
+    flex-direction: row;
+    overflow: hidden;
+    
 }
 
 button {
@@ -53,10 +56,14 @@ button {
 }
 
 .cell {
-    border: 0.5px solid black;
-    background-color: white ;
+    /* border: 0.5px solid black; */
+    background-color: rgba(0 0, 0, 1);
     box-sizing: border-box;
-    padding: 1px;
-    margin: 1px;
+    /* padding: 13px; */
+    margin: 0px;
     /* display: flex; */
+}
+
+.cell:hover {
+    background-color: grey;
 }
