--- a/styles.css
+++ b/styles.css
@@ -57,10 +57,11 @@ button {
 
 .cell {
     /* border: 0.5px solid black; */
-    background-color: rgba(0 0, 0, 1);
+    background-color: rgba(255 255, 255, 0);
     box-sizing: border-box;
     /* padding: 13px; */
     margin: 0px;
+    opacity: 0;
     /* display: flex; */
 }
 
