--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,11 @@ html {
 }
 
 body {
- background-color: yellow;
+ background-image: linear-gradient(45deg, 
+ #03A8E3,
+ #CACDD2,
+ #D2C100
+ );
  width: 100%;
  height: 100%;
  display: flex;
@@ -21,12 +25,42 @@ body {
  flex-wrap: wrap;
 }
 
+h1 {
+    color: #facc15;
+    font-size: 1.2rem;
+    text-shadow: 1px 1px black;
+}
+
+#logo {
+    font-family: "Whisper", cursive;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 3.3rem;
+}
+
+#buttons {
+    width: 450px;
+    display: flex;
+    justify-content: space-between;
+
+}
+button {
+    background-color: #CC3231;
+    color: #FFEE9E;
+    height: 30PX;
+    width: 30%;
+    border-style:outset;
+    text-transform: capitalize;
+
+
+}
+
 #container {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    background-color: red;
-    border: 2px solid rgb(92, 0, 0);
+    flex-wrap: no-wrap;
+    background-color: #C2061E;
+    border: 2px outset rgb(92, 0, 0);
     width: 100%;
     height: 100%;
     max-width: 600px;
@@ -34,6 +68,8 @@ body {
     justify-items: center;
     align-items: center;
     border-radius: 20px;
+    box-shadow: 10px 10px 20px;
+    
 
 }
 
@@ -48,6 +84,8 @@ body {
     flex-wrap: wrap;
     flex-direction: row;
     overflow: hidden;
+    border-style: inset;
+    
     
 }
 
@@ -65,6 +103,19 @@ button {
     /* display: flex; */
 }
 
-.cell:hover {
-    background-color: grey;
+#knob-container {
+    display: flex;
+    width: 90%;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    color: #CC3231;
+
+}
+
+.knob {
+    border-radius: 100%;
+    border: 2px solid black;
+    height: 55px;
+    width: 55px;
+    background-color: white;
 }
